$Id: NEWS,v 1.461 2003-08-11 06:07:53 castaglia Exp $

CVS
---------------------------------
- Bug 2051 - freebytes in TransferRate does not work properly.
- Bug 2043 - Proftpd converts LF to CRLF on PUT on Cygwin.  This turned out
  to be caused by the Cygwin layer.  The fix was to use the Cygwin-specific
  O_BINARY open() flag when opening binary files on Cygwin.
- Bug 1804 - Permit selection of additional contrib modules when building
  the RPM
- Bug 2074 - MaxStoreFileSize restriction capabilities ignored.  This bug
  was affecting MaxRetrieveFileSize as well.
- Bug 2075 - LIST / fails under Cygwin.  This was due to the addition of
  an additional path separator character; Cygwin treats paths that start
  with "//" differently than paths that start with "/".
- Bug 2076 - The --enable-transfer-buffer-size configure option doesn't work
  properly.  It was overriding the --enable-buffer-size option, rather than
  the corresponding tunable buffer size.
- Bug 2069 - Long MKD path causes truncated server response.
- Fixed handling of %N/%y in DisplayConnect files.
- Bug 2083 - "550 Access denied" on group permission with AuthGroupFile.  This
  was caused by a strictly linear search in the AuthGroupFile from the
  current file pointer to end of file, which (depending on the ordering of
  entries in the file) might have skipped necessary group entries.
- Bug 2088 - proftpd -t segfault.  A very specific configuration would cause
  a segfault in the configuration parser: if the first sub-context in a given
  context (e.g. a <Limit> context within a <Directory> context) was empty,
  the removal of that empty context from the internal structures by the
  parser would inadvertently trigger a segfault later.  This has been
  fixed by using a better memory pool, with a longer lifetime, for allocating
  the internal configuration structures.
- Bug 2090 - mod_rewrite doesn't compile on Solaris 8.  The FIONREAD macro