@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.461 2003-08-11 06:07:53 castaglia Exp $
+$Id: NEWS,v 1.462 2003-08-13 06:07:38 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -53,6 +53,8 @@ CVS
   support, use the new --enable-ipv6 configure option.
 - Bug 2130 - %y in DisplayLogin is not updated correctly.
 - Bug 2137 - NLST and IgnoreHidden causes segfault.
+- Bug 2142 - sstrncpy() not available to lib/vsnprintf.c.  sstrncpy() is now
+  implemented in the support library (libsupp.a).
 
 1.2.9rc1 - Released 15-May-2003
 ---------------------------------
